Add tenants and start administration
Add tenants and start administration documentation